--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,6 @@ a.bouton2:active {
 
 #propositions {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: row;
 }
@@ -235,18 +234,16 @@ a.bouton2:active {
     display: flex;
     flex-wrap: wrap;
     background-color:#F2F2F2;
-    width: 65%;
     border-radius: 20px 20px 20px 20px;
-    min-width: 350px;
+    margin-right: 2%;
 }
 
 #presentation h1 {
-    margin-left: 7%;
-    margin-bottom: 1%;
+    margin-left: 9%;
 }
 
 #presentation h3 {
-    margin-left: 7%;
+    margin-left: 9%;
     margin-bottom: 5%;
 }
 
@@ -343,7 +340,7 @@ a.images:active {
     flex-direction: column;
     background-color:#F2F2F2;
     align-items: center;
-    width: 30%;
+    width: 50%;
     border-radius: 20px 20px 20px 20px;
     min-width: 350px;
 }
@@ -373,6 +370,16 @@ a.images:active {
     margin-top: 68px;
 }
 
+#popmobile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 19px;
+    margin-bottom: 8%;
+}
+
 
 a.imagescote {
     display: flex;
@@ -382,11 +389,10 @@ a.imagescote {
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
-    min-width: 250px;
-    max-width: 350px;
+    width: 80%;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin-top: 8%;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
 }
 
 
@@ -424,7 +430,7 @@ a.imagescote:active {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 4%;
+    width: 100%;
 }
 
 #activités h3 {
@@ -439,14 +445,16 @@ a.grandesimages {
     text-decoration: none;
     color: black;
     max-height: auto;
-    max-width: 400px;
+    width : 22%;
+    min-width: 360px;
+    margin-bottom: 50px;
     object-fit: cover;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 a.grandesimages img {
     width: 100%;
-    height: 420px;
+    height: 470px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -464,15 +472,20 @@ a.grandesimages:active {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 22%;
+    min-width: 360px;
+    height: 550px;
+    margin-bottom: 50px;
 }
 
 a.moyimages {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
+    max-height: 250px;
+    min-width: 360px;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -486,8 +499,6 @@ a.moyimages:active {
 
 a.moyimages img {
     width: 100%;
-    width: 400px;
-    max-height: 150px;
     height: 100%;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
@@ -803,33 +814,42 @@ VERSION MOBILE
         align-items: center;
         justify-content: center;
         min-width: 100%;
+        max-width: 100%;
+        height: auto;
     }
 
     a.grandesimages {
-        width: 90%;
+        min-width: 90%;
+        max-width: 90%;
         min-height: 230px;
         max-height: 230px;
+        height: 200px;;
         margin-bottom: 5%;
     }
 
     a.grandesimages img {
         width: 100%;
         max-height: 160px;
-        height: 100%;
+        height: 160px;
         border-radius: 20px 20px 0 0;
     }
 
     .actimages {
         align-items: center;
         justify-content: center;
+        margin-bottom: 0;
+        height: 500px;
+        min-width: 90%;
+        max-width: 90%;
     }
 
     a.moyimages {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        margin-bottom: 5%;
-        max-width: 90%;
+        margin-bottom: 20px;
+        min-width: 100%;
+        max-width: 100%;
         min-height: 230px;
         max-height: 230px;
     }
@@ -837,6 +857,7 @@ VERSION MOBILE
     a.moyimages img {
         min-width: 100%;
         max-width: 100%;
+        height: 70%;
     }
 
     /*FOOTER MOBILE*/
@@ -848,7 +869,7 @@ VERSION MOBILE
 }
 
 /*************************
-VERSION TABLETTE
+VERSION TABLETTE PORTRAIT
 *************************/
 
 @media only screen and (min-width:480px) and (max-width:768px) {
@@ -860,7 +881,7 @@ VERSION TABLETTE
         padding: 10px;
     }
 
-    /*Section hébergements et populaires TABLETTE*/
+    /*Section hébergements et populaires TABLETTE PORTRAIT*/
 
     #propositions {
         display: flex;
@@ -870,7 +891,7 @@ VERSION TABLETTE
         flex-direction: column-reverse;
     }
 
-    /**Hébergements TABLETTE**/
+    /**Hébergements TABLETTE PORTRAIT**/
 
     #presentation {
         border-radius: 0 0 0 0;
@@ -918,7 +939,7 @@ VERSION TABLETTE
         border-radius: 20px 20px 0 0;
     }
 
-    /*Populaires TABLETTE*/
+    /*Populaires TABLETTE PORTRAIT*/
 
     #populaires {
         border-radius: 0 0 0 0;
@@ -962,7 +983,7 @@ VERSION TABLETTE
         margin-left: 3%;
     }
 
-    /*Activités TABLETTE*/
+    /*Activités TABLETTE PORTRAIT*/
 
     #sectionactivités {
         min-width: 100%;
@@ -982,50 +1003,94 @@ VERSION TABLETTE
     a.grandesimages {
         max-width: none;
         width: 80%;
-        height: auto;
+        max-height: 275px;
         margin-bottom: 5%;
     }
 
     a.grandesimages img {
         width: 100%;
-        max-height: 300px;
-        height: 100%;
+        max-height: 200px;
         border-radius: 20px 20px 0 0;
     }
 
     .actimages {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
+        width: 80%;
         max-width: 80%;
     }
 
-    a.moyimages {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        margin-bottom: 5%;
-        max-width: none;
-        width: 48%;
-        min-height: 400px;
-        max-height: 400px;
-    }
-    
-    a.moyimages img {
-        min-height: 340px;
-        height: auto;
-        max-height: auto;
-        min-width: 100%;
-        max-width: 100%;
-    }
 }
 
+/*************************
+VERSION TABLETTE PAYSAGE
+*************************/
+
 @media only screen and (min-width:769px) and (max-width:1024px) {
+    
     header {
         padding: 10px;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 
     main {
         padding: 10px;
+        padding-top: 0;
     }
+
+        /*Section hébergements et populaires TABLETTE PAYSAGE*/
+
+        #propositions {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column-reverse;
+        }
+
+        /*Hébergements TABLETTE PAYSAGE*/
+
+        #presentation {
+            margin : 0;
+            width: 95%
+        }
+
+        #presentation h3 {
+            margin-left: 15%;
+        }
+
+        /*Populaires TABLETTE PAYSAGE*/
+
+        #populaires {
+            display: flex;
+            flex-wrap: wrap;
+            background-color:#F2F2F2;
+            align-items: center;
+            width: 100%;
+            border-radius: 0;
+            margin-bottom: 5%;
+        }
+
+        #popmobile {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 95%;
+            margin-bottom: 2%;
+        }
+
+        a.imagescote {
+            margin-top: 0;
+            width: 30%;
+        }
+
+        /*Section activités TABLETTE PAYSAGE*/
+
+        #activit {
+            margin-left: 3%;
+        }
+
+        #activités {
+            justify-content: space-evenly;
+        }
+
 }
