--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a.inscrire {
 
 a.inscrire:visited {
     color: #0065FC;
-    font-size: bolder;
+    font-weight: bolder;
 }
 
 /*Section recherche*/
@@ -103,9 +103,8 @@ main {
 }
 
 #recherche i {
-    border: 15px solid;
+    border: 15px solid #F2F2F2;
     border-radius: 10px 0 0 10px;
-    border-color: #F2F2F2;
     background-color: #F2F2F2;
     float: left;
 }
@@ -444,7 +443,6 @@ a.grandesimages {
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
-    max-height: auto;
     width : 22%;
     min-width: 360px;
     margin-bottom: 50px;
@@ -613,7 +611,7 @@ VERSION MOBILE
 
     a.inscriremobile:visited {
         color: #0065FC;
-        font-size: bolder;
+        font-weight: bolder;
     }
 
     .inscrire {
