--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ a.images {
     flex-direction: row;
     flex-wrap: wrap;
     border: white solid;
-    background-color: white;
+    background-color:rgb(255, 255, 254);
     border-radius: 20px 20px 20px 20px;
     width: 100%;
     min-width: 300px;
