--- a/styles.css
+++ b/styles.css
@@ -657,7 +657,7 @@ VERSION MOBILE
     #boutonmobile i{
         background-color: #0065FC;
         border: 5px solid;
-        border-color: #0065FC;
+        border-color: #0064Fa;
     }
 
     #boutonmobile:active {
