--- a/styles.css
+++ b/styles.css
@@ -864,6 +864,11 @@ VERSION MOBILE
     footer {
         margin-left: -10px;
     }
+
+    footer div {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
     
 }
 
@@ -1018,6 +1023,13 @@ VERSION TABLETTE PORTRAIT
         max-width: 80%;
     }
 
+    /*FOOTER TABLETTE PORTRAIT*/
+
+    footer div {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
 }
 
 /*************************
@@ -1100,5 +1112,12 @@ VERSION TABLETTE PAYSAGE
         .actimages {
             width: 40%;
         }
+
+    /*FOOTER TABLETTE PAYSAGE*/
+
+    footer div {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
         
 }
