--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
 body {
     font-family: "Raleway", sans-serif;
+    margin: 0;
+}
+
+.wrapper {
+    max-width: 1024px;
+    margin: auto;
 }
 
 h1 {
     margin-bottom: 0;
-    margin-top: 60px;
-}
-
-h2 {
-    font-size: 15px;
+    margin-top: 40px;
+    
 }
 
 h3 {
@@ -18,10 +21,7 @@ h3 {
 /*HEADER*/
 
 header {
-    padding-right: 50px;
-    padding-left: 50px;
-    margin-bottom: 3%;
-    margin-top: 1%;
+    padding-top: 18px;
 }
 
 nav {
@@ -89,11 +89,7 @@ a.inscrire:visited {
 
 /*Section recherche*/
 
-main {
-    padding-right: 50px;
-    padding-left: 50px;
-    object-fit: contain;
-}
+
 
 
 #recherche {
@@ -185,6 +181,10 @@ a.bouton2 {
     margin-left: 20px;
 }
 
+a.bouton2 p {
+    padding: 15px;
+}
+
 a.bouton2:hover {
     background-color: #0065FC;
     color: white;
@@ -225,6 +225,7 @@ a.bouton2:active {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    width: 100%;
 }
 
 /*Hébergements*/
@@ -235,54 +236,40 @@ a.bouton2:active {
     background-color:#F2F2F2;
     border-radius: 20px 20px 20px 20px;
     margin-right: 2%;
-    width: 70%;
-}
-
-#presentation h1 {
-    margin-left: 9%;
-}
-
-#presentation h3 {
-    margin-left: 9%;
-    margin-bottom: 5%;
+    width: 75%;
+    padding: 20px;
 }
 
 #vignettes {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 a.images {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: inline-block;
     border: transparent solid;
+    justify-content: center;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    min-height: 224px;
-    max-height: 236px;
-    min-width: 300px;
-    max-width: 300px;
     text-decoration: none;
     color: black;
-    margin: 2%;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    width: 31%;
+    height: 30%;
 }
 
 a.images img {
-    width: 100%;
-    height: 100%;
-    max-height: 135px;
+    width: 98%;
+    height: 50%;
     border: white solid;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
 
 a.images:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 a.images:active {
@@ -290,13 +277,14 @@ a.images:active {
 }
 
 .description {
-    margin-left: 7%;
-    margin-top: -4%;
-    min-height: 92px;
-    position: relative;
+    width: 100%;
+    height: 35%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .description p {
+    margin: 0;
     line-height: 1.5;
 }
 
@@ -314,11 +302,9 @@ a.images:active {
 }
  
 .etoiles {
-    margin-bottom: 3px;
     display: flex;
     flex-direction: row;
-    position: absolute;
-    bottom: 5px;
+    bottom: 0;
 }
 
 .etoilespleines {
@@ -328,6 +314,14 @@ a.images:active {
 .etoilesvides {
     color: rgb(194, 193, 193);
     margin-left: 3px;
+}
+
+.plus {
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /*Populaires*/
@@ -340,12 +334,11 @@ a.images:active {
     align-items: center;
     width: 30%;
     border-radius: 20px 20px 20px 20px;
-    min-width: 350px;
+    padding: 20px;
 }
 
 .descriptionpop {
-    margin-left: 7%;;
-    margin-top: -4%;
+    padding: 10px;
     min-height: 92px;
     position: relative;
     width: 60%;
@@ -353,29 +346,22 @@ a.images:active {
 
 .descriptionpop p {
     line-height: 1.5;
+    margin: 0;
 }
 
 #entete {
-    min-width: 100%;
-    max-width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    align-self: flex-start;
-    justify-content: space-around;
-}
-
-#entete i {
-    margin-top: 68px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #popmobile {
     display: flex;
     flex-direction: column;
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    margin-top: 19px;
-    margin-bottom: 8%;
+    justify-content: space-between;
 }
 
 
@@ -387,10 +373,9 @@ a.imagescote {
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
-    width: 80%;
+    width: 100%;
+    margin-bottom: 25px;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    margin-top: 8%;
-    margin-bottom: 1%;
 }
 
 
@@ -501,18 +486,17 @@ a.moyimages img {
 /*FOOTER*/
 
 footer {
-    margin: 10px 0 20px 0;
     background-color: #F2F2F2;
-    display: flex;
-    flex-wrap: wrap;
+    padding-bottom: 20px;
 }
 
-footer div {
-    padding-left: 50px;
-    padding-right: 50px;
-    margin-right: 10%;
-    margin-top: 1.5%;
-    margin-bottom: 1.5%;
+footer .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .wrapper div {
+    width: 23%;
 }
 
 footer div p a {
@@ -528,7 +512,7 @@ footer div p a:hover {
 VERSION MOBILE
 *************************/
 
-@media only screen and (max-width: 650px)
+@media only screen and (max-width: 480px)
 {
 
     body {
@@ -872,7 +856,7 @@ VERSION MOBILE
 VERSION TABLETTE PORTRAIT
 *************************/
 
-@media only screen and (min-width:651px) and (max-width:800px) {
+@media only screen and (min-width:481px) and (max-width:768px) {
     header {
         padding: 10px;
         margin-bottom: 0;
