--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -223,6 +223,7 @@ a.bouton2:active {
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
+    object-fit: cover;
 }
 
 /*Hébergements*/
@@ -242,24 +243,25 @@ a.bouton2:active {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
+    height: 450px;
 }
 
 a.images {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     border: transparent solid;
-    justify-content: center;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     width: 31%;
-    height: 30%;
+    height: 45%;
 }
 
 a.images img {
-    width: 98%;
-    height: 50%;
+    width: 97%;
+    height: 60%;
     border: white solid;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
@@ -274,10 +276,12 @@ a.images:active {
 }
 
 .description {
-    width: 100%;
-    height: 35%;
-    padding-left: 10px;
-    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 90%;
+    height: 40%;
+    padding: 5px;
 }
 
 .description p {
@@ -318,7 +322,7 @@ a.images:active {
     color: black;
     font-weight: bolder;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 /*Populaires*/
@@ -335,10 +339,11 @@ a.images:active {
 }
 
 .descriptionpop {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
-    min-height: 92px;
-    position: relative;
     width: 60%;
+    justify-content: space-between;
 }
 
 .descriptionpop p {
@@ -367,28 +372,25 @@ a.imagescote {
     flex-direction: row;
     border: transparent solid;
     background-color: white;
+    margin-bottom: 20px;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
-    width: 100%;
-    margin-bottom: 25px;
+    width: 98%;
+    min-height: 30%;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 
 a.imagescote img {
-    min-width: 40%;
-    max-width: 40%;
-    min-height : 170px; 
-    max-height: 170px;
+    width: 40%;
     border: white solid;
     border-radius: 20px 0 0 20px;
-    float: left;
     object-fit: cover;
 }
 
 a.imagescote:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 a.imagescote:active {
@@ -396,11 +398,9 @@ a.imagescote:active {
 }
 
 .etoilespop {
-    margin-bottom: 3px;
     display: flex;
     flex-direction: row;
-    position: absolute;
-    bottom: 10px; 
+    bottom: 0;
 }
 
 /*Activités*/
