--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ h1 {
     
 }
 
+h2 {
+    margin-top: 0;
+}
+
 h3 {
     margin-bottom: 25px;
 }
@@ -228,6 +232,7 @@ a.bouton2:active {
     flex-direction: row;
     width: 100%;
     object-fit: cover;
+    margin-bottom: 35px;
 }
 
 /*Hébergements*/
@@ -237,9 +242,9 @@ a.bouton2:active {
     flex-wrap: wrap;
     background-color:#F2F2F2;
     border-radius: 20px 20px 20px 20px;
-    margin-right: 2%;
+    margin-right: 25px;
     width: 75%;
-    padding: 20px;
+    padding: 25px;
 }
 
 #vignettes {
@@ -253,18 +258,20 @@ a.bouton2:active {
 a.images {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border: transparent solid;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    width: 30%;
+    width: 30.5%;
     height: 43%;
+    padding-bottom: 5px;
 }
 
 a.images img {
-    width: 97%;
+    width: 98%;
     height: 60%;
     border: white solid;
     border-radius: 20px 20px 0 0;
@@ -284,8 +291,8 @@ a.images:active {
     flex-direction: column;
     justify-content: space-between;
     width: 97%;
-    height: 39%;
-    padding: 5px;
+    height: 40%;
+    padding : 5px;
     margin-left: 5px;
 }
 
@@ -340,7 +347,7 @@ a.images:active {
     align-items: center;
     width: 30%;
     border-radius: 20px 20px 20px 20px;
-    padding: 20px;
+    padding: 25px;
 }
 
 .descriptionpop {
@@ -362,6 +369,10 @@ a.images:active {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+#entete i{
+    margin-bottom: 20px;
 }
 
 #popmobile {
@@ -417,6 +428,8 @@ a.imagescote:active {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: 500px;
+    margin-bottom: 50px;
 }
 
 #activités p {
@@ -426,26 +439,26 @@ a.imagescote:active {
 
 a.grandesimages {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
     width : 23%;
-    margin-bottom: 50px;
+    height: 100%;
     object-fit: cover;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 a.grandesimages img {
     width: 100%;
-    height: 470px;
+    height: 89.6%;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
 
 a.grandesimages:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 a.grandesimages:active {
@@ -455,25 +468,51 @@ a.grandesimages:active {
 .actimages {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     width: 23%;
-    height: 550px;
-    margin-bottom: 50px;
+    height: 100%;
+}
+
+a.petitesimages {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 20px 20px 20px 20px;
+    text-decoration: none;
+    color: black;
+    height: 38%;
+    box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+a.petitesimages:hover {
+    transform: scale(1.05);
+}
+
+a.petitesimages:active {
+    transform: scale(0.9);
+}
+
+a.petitesimages img {
+    width: 100%;
+    height: 73%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
 }
 
 a.moyimages {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border-radius: 20px 20px 20px 20px;
     text-decoration: none;
     color: black;
-    max-height: 250px;
+    height: 55%;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 a.moyimages:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 a.moyimages:active {
@@ -482,7 +521,7 @@ a.moyimages:active {
 
 a.moyimages img {
     width: 100%;
-    height: 75%;
+    height: 81%;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
