--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ main {
 }
 
 .wrapper {
-    max-width: 1440px;
+    max-width: 1024px;
     margin: auto;
 }
 
@@ -29,28 +29,33 @@ h3 {
 /*HEADER*/
 
 header {
+    display: flex;
     padding: 10px;
+    width: 100%;
+}
+
+header img {
+    height: 60px;
 }
 
 nav {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
+    justify-content: flex-end;
 }
 
 nav ul {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: flex-end ;
     list-style: none;
     margin: 0;
     padding: 0;
-}
-
-nav img {
-    height: 60px;
+    min-width: none;
+    width: 75%;
 }
 
 nav li {
@@ -60,7 +65,7 @@ nav li {
 a.bouton1 {
     text-decoration: none;
     color: black;
-    padding: 29px;
+    padding: 37px;
 }
 
 a.bouton1:visited {
@@ -70,7 +75,7 @@ a.bouton1:visited {
 a.bouton1:hover {
     border-top: #0065FC solid;
     border-width: 2px;
-    padding: 29px;
+    padding: 37px;
     color: #0065FC;
 }
 
@@ -86,7 +91,6 @@ a.inscrire {
     text-decoration: none;
     font-weight: bold;
     color: #0065FC;
-    width: 100%;
     padding: 29px;
 }
 
@@ -589,6 +593,10 @@ VERSION MOBILE
     nav {
         min-width: 100%;
         max-width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row;
     }
 
     nav img {
@@ -599,9 +607,7 @@ VERSION MOBILE
     nav ul {
         display: flex;
         flex-wrap: wrap;
-        flex-direction: row;
-        align-content: center;
-        justify-content: center;
+        order: 1;
         min-width: 100%;
         max-width: 100%;
         padding: 0;
@@ -612,6 +618,11 @@ VERSION MOBILE
         margin: 0;
         display: flex;
         min-width: 50%;
+    }
+
+    a.inscrire {
+        display: flex;
+        align-self: flex-end;
     }
 
     a.bouton1 {
@@ -638,23 +649,6 @@ VERSION MOBILE
         border-width: 2px;
         padding-bottom: 10px;
         color: #0065FC;
-    }
-
-    a.inscriremobile {
-        display: flex;
-        text-decoration: none;
-        font-weight: bold;
-        color: #0065FC;
-        margin-right: 5%;
-    }
-
-    a.inscriremobile:visited {
-        color: #0065FC;
-        font-weight: bolder;
-    }
-
-    .inscrire {
-        display: none;
     }
 
     main {
